--- a/src/components/Projects/E3Selector/Components/Components.sass
+++ b/src/components/Projects/E3Selector/Components/Components.sass
@@ -1,2 +1,18 @@
-button
-	background: white
+.time-table
+	th
+		padding-right: 8px
+
+	tr
+		&:first-child
+			td
+				text-align: center
+				font-weight: bold
+	.timeTableCheckbox
+		width: 40px
+		height: 40px
+		margin: 2px
+		background-color: #E0E0E0
+		cursor: pointer
+
+		&.checked-true
+			background-color: #F2994A
