--- a/src/components/Projects/E3Selector/Components/Components.sass
+++ b/src/components/Projects/E3Selector/Components/Components.sass
@@ -16,3 +16,14 @@
 
 		&.checked-true
 			background-color: #F2994A
+
+.vertical-filter
+	text-transform: uppercase
+	color: #999
+	font-size: 18px
+	font-weight: bold
+	margin: 0 12px
+	cursor: pointer
+
+	&.vertical-checked
+		color: #0057A7
