overview functional, conflict detection still TODO

--- a/src/components/Projects/E3Selector/Components/Components.sass
+++ b/src/components/Projects/E3Selector/Components/Components.sass
@@ -53,6 +53,12 @@
 			bottom: 41px
 			font-size: 36px
 
+	h1.on-ok
+			color: #27AE60
+
+	h1.on-warn
+			color: #F2994A
+
 	#overview-credit-count:before
 		content: "credits\Aselected"
 
