--- a/src/components/Projects/E3Selector/App.sass
+++ b/src/components/Projects/E3Selector/App.sass
@@ -30,15 +30,37 @@
 	cursor: pointer
 
 	svg
-		transform: translateY(6px)
+		transform: translateY(4px)
 		width: 45px
 		height: 45px
 
 .select-icon
 	position: absolute
 	top: -2px
-	left: -60px
+	left: -64px
 	svg
 		width: 40px
 		height: 40px
 		color: #333
+
+.lang-flag
+	transform: translateY(3px)
+
+.hr-lighter
+	color: #C0C0C0
+	height: 1px
+
+.lecEx
+	background-color: #90EE90
+
+.lecture
+	background-color: #B0E0E6
+
+.seminar
+	background-color: #FFDAB9
+
+.block
+	background-color: #FA8072
+
+.elearn
+	background-color: #D8BFD8
