--- a/src/components/Projects/E3Selector/App.sass
+++ b/src/components/Projects/E3Selector/App.sass
@@ -64,3 +64,9 @@
 
 .elearn
 	background-color: #D8BFD8
+
+.share-modal
+	position: absolute
+	top: 50%
+	left: 50%
+	transform: translate(-50%, -50%)
