--- a/src/components/Projects/E3Selector/res/extraStyles.sass
+++ b/src/components/Projects/E3Selector/res/extraStyles.sass
@@ -50,19 +50,19 @@
 	color: #C0C0C0
 	height: 1px
 
-.lecEx
+.lecExBorder
 	background-color: #90EE90
 
-.lecture
+.lectureBorder
 	background-color: #B0E0E6
 
-.seminar
+.seminarBorder
 	background-color: #FFDAB9
 
-.block
+.blockBorder
 	background-color: #FA8072
 
-.elearn
+.elearnBorder
 	background-color: #D8BFD8
 
 .share-modal
