--- a/src/components/Projects/E3Selector/res/extraStyles.sass
+++ b/src/components/Projects/E3Selector/res/extraStyles.sass
@@ -1,5 +1,8 @@
 .info-table
-	float: right
+	width: 100%
+
+	table
+		margin: 0 auto
 
 	th
 		font-style: normal
@@ -72,6 +75,7 @@
 	transform: translate(-50%, -50%)
 
 .time-table
+	margin: 0 auto
 	th
 		padding-right: 8px
 
