programm select mobile view

--- a/src/components/Projects/E3Selector/res/extraStyles.sass
+++ b/src/components/Projects/E3Selector/res/extraStyles.sass
@@ -103,6 +103,10 @@
 		transform: scale(0.8)
 		margin: -40px
 
+	@media screen and (max-width: 500px)
+		transform: scale(0.7)
+		margin: -45px -80px
+
 .vertical-filter
 	text-transform: uppercase
 	color: #999
